initial 'modal popup' logic for adding items

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Template Test</h1>
-
     <form class="add-item-form" action="" style="display:none;">
         <ul>
             <li class="form-row">
@@ -25,5 +23,7 @@
             </li>
         </ul>
     </form>
+
+    <button id="modal-popup-button">+</button>
 </body>
 </html>
