add submit button to 'add item' form

--- a/src/template.html
+++ b/src/template.html
@@ -21,6 +21,10 @@
               <label for="date">Date:</label>
               <input class='form-input' type="date" name='date' id='date' required>
             </li>
+
+            <li class="form-row">
+                <button type="submit" class="submit-item">Add</button>
+            </li>
         </ul>
     </form>
 
