change some classes to ids for consistency

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form class="add-item-form" action="" style="display:none;">
+    <form id="add-item-form" action="" style="display:none;">
         <ul>
             <li class="form-row">
                 <p>Add Item</p>
@@ -23,7 +23,7 @@
             </li>
 
             <li class="form-row">
-                <button type="submit" class="submit-item">Add</button>
+                <button type="submit" id="submit-item-button">Add</button>
             </li>
         </ul>
     </form>
