refactor and organise files into subfolders

--- a/src/template.html
+++ b/src/template.html
@@ -61,7 +61,7 @@
             </li>
 
             <li class="form-row">
-                <button type="submit" id="edit-item-button">Add</button>
+                <button type="submit" id="edit-item-button">Confirm</button>
             </li>
         </ul>
     </form>
