edit add new item button text content

--- a/src/template.html
+++ b/src/template.html
@@ -66,7 +66,7 @@
         </ul>
     </form>
 
-    <button id="modal-popup-button">+</button>
+    <button id="modal-popup-button">Add New Item</button>
     <button id="clear-all-button">Clear All</button>
 
 </body>
