add dayjs module to display item dates

--- a/src/template.html
+++ b/src/template.html
@@ -57,7 +57,7 @@
             
             <li class="form-row">
               <label for="date">Edit Date:</label>
-              <input class='form-input' type="edit-date" name='edit-date' id='edit-date' required>
+              <input class='form-input' type="date" name='edit-date' id='edit-date' required>
             </li>
 
             <li class="form-row">
