--- a/src/template.html
+++ b/src/template.html
@@ -75,7 +75,7 @@
     <div id="content-area">
         <button id="modal-popup-button">+</button>
         <div id="list-controls">
-
+            <button id="sort-button" class="descending">Sort</button>
         </div>
         <div id="delete-buttons">
             <button id="delete-options-button" class="."></button>
