allow date editing

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="header">
-        <h1 id="mainHeading">My Planner</h1>
+        <h1 id="mainHeading">My Planner <img src="diary.svg" alt=""></h1>
     </div>
 
     <form id="add-item-form" action="" style="display:none;max-width: 300px;
@@ -76,7 +76,7 @@
     </form>
 
     <div id="content-area">
-        <button id="modal-popup-button">+</button>
+        <button id="modal-popup-button"><p>+</p></button>
         <div id="list-controls">
             <button id="sort-button" class="descending">Sort</button>
         </div>
