--- a/src/template.html
+++ b/src/template.html
@@ -14,15 +14,8 @@
         <h1 id="mainHeading">My Planner <img src="diary.svg" alt=""></h1>
     </div>
 
-    <form id="add-item-form" action="" style="display:none;max-width: 300px;
-    padding: 10px;
-    background-color: white;
-    display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    border: 3px solid #f1f1f1;
-    z-index: 9;">
+    <form id="add-item-form" action="" style="display:none">
+        <button id="close-form" type="button">x</button>
         <ul>
             <li class="form-row">
                 <p>Add Item</p>
@@ -44,16 +37,8 @@
         </ul>
     </form>
 
-    <form id="edit-item-form" action="" style="display:none;
-    padding: 10px;
-    background-color: white;
-    position: fixed;
-    top: 20%;
-    left: 10%;
-    width: 300px;
-    height: 300px;
-    border: 3px solid #f1f1f1;
-    z-index: 9000;">
+    <form id="edit-item-form" action="" style="display:none">
+        <button id="close-form" type="button">x</button>
         <ul>
             <li class="form-row">
                 <p>Edit Item</p>
