add 'clear completed items' functionality

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Planner</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
@@ -69,7 +69,7 @@
             <button id="delete-options-button" class="."></button>
             <div id="delete-options-container" class="hidden">
                 <button id="clear-all-button" class="delete-button hidden">Clear All</button>
-                <button id="clear-completed-button" class="delete-button hidden">Clear Completed</button>
+                <button id="clear-complete-button" class="delete-button hidden">Clear Completed</button>
             </div>
         </div>
         <div id="footer"></div>
