improve modal management & add close form button functionality

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
     </div>
 
     <form id="add-item-form" action="" style="display:none">
-        <button id="close-form" type="button">x</button>
+        <button id="close-add-form" class='close-form' type="button">x</button>
         <ul>
             <li class="form-row">
                 <p>Add Item</p>
@@ -38,7 +38,7 @@
     </form>
 
     <form id="edit-item-form" action="" style="display:none">
-        <button id="close-form" type="button">x</button>
+        <button id="close-edit-form" class='close-form' type="button">x</button>
         <ul>
             <li class="form-row">
                 <p>Edit Item</p>
