--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
             </li>
 
             <li class="form-row">
-                <button type="submit" id="submit-item-button">Add</button>
+                <button type="submit" class='submit-form-button' id="submit-item-button">Add</button>
             </li>
         </ul>
     </form>
@@ -55,18 +55,18 @@
             </li>
 
             <li class="form-row">
-                <button type="submit" id="edit-item-button">Confirm</button>
+                <button type="submit" class='submit-form-button' id="edit-item-button">Confirm</button>
             </li>
         </ul>
     </form>
 
     <div id="content-area">
-        <button id="modal-popup-button"><p>+</p></button>
+        <button class="main-button" id="modal-popup-button"><p>+</p></button>
         <div id="list-controls">
             <button id="sort-button" class="descending">Sort</button>
         </div>
         <div id="delete-buttons">
-            <button id="delete-options-button" class="."></button>
+            <button class="main-button" id="delete-options-button" class="."></button>
             <div id="delete-options-container" class="hidden">
                 <button id="clear-all-button" class="delete-button hidden">Clear All</button>
                 <button id="clear-complete-button" class="delete-button hidden">Clear Completed</button>
