--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
         <h1 id="mainHeading">My Planner <img src="diary.svg" alt=""></h1>
     </div>
 
-    <form id="add-item-form" action="" style="display:none">
+    <form id="add-item-form" action="" style="display:none" novalidate>
         <button id="close-add-form" class='close-form' type="button">x</button>
         <ul>
             <li class="form-row">
@@ -23,7 +23,7 @@
 
             <li class="form-row">
               <label for="message">Add Item:</label>
-              <input class='form-input' type="text" id='message' name='message' required autofocus>
+              <input class='form-input' type="text" id='message' name='message' maxlength="100" required autofocus>
             </li>
             
             <li class="form-row">
@@ -37,7 +37,7 @@
         </ul>
     </form>
 
-    <form id="edit-item-form" action="" style="display:none">
+    <form id="edit-item-form" action="" style="display:none" novalidate>
         <button id="close-edit-form" class='close-form' type="button">x</button>
         <ul>
             <li class="form-row">
@@ -46,7 +46,8 @@
 
             <li class="form-row">
               <label for="edit-message">Edit Item:</label>
-              <input class='form-input' type="text" id='edit-message' name='edit-message' required autofocus>
+              <input class='form-input' type="text" id='edit-message' name='edit-message' minlength="1" maxlength="100" required autofocus>
+              <span class="input-error-message"></span>
             </li>
             
             <li class="form-row">
