add form validation, split addItem code into own module, refactor

--- a/src/template.html
+++ b/src/template.html
@@ -24,6 +24,7 @@
             <li class="form-row">
               <label for="message">Add Item:</label>
               <input class='form-input' type="text" id='message' name='message' maxlength="100" required autofocus>
+              <span class="input-error-message" id="add-item-message-error"></span>
             </li>
             
             <li class="form-row">
@@ -47,7 +48,7 @@
             <li class="form-row">
               <label for="edit-message">Edit Item:</label>
               <input class='form-input' type="text" id='edit-message' name='edit-message' minlength="1" maxlength="100" required autofocus>
-              <span class="input-error-message"></span>
+              <span class="input-error-message" id="edit-item-message-error"></span>
             </li>
             
             <li class="form-row">
